--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container-card">
-      <div class="svg-section">
+    <main class="container-card">
+      <section class="svg-section">
         <div class="bg"></div>
         <div class="wo"></div>
-      </div>
+      </section>
       <div class="box"></div>
 
-      <div class="faq-section">
+      <section class="faq-section">
         <h1>FAQ</h1>
 
         <div class="qa">
@@ -123,8 +123,8 @@
             during normal business hours.
           </p>
         </div>
-      </div>
-    </div>
+      </section>
+    </main>
 
     <script src="app.js"></script>
   </body>
